Full code migration! 1.21.1 -> 26.1.2
In short, all the code that needed to be ported has been ported, and the code that shouldn't be ported has been fixed. That's it~